# soul-scraper-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  render.yaml  sources.example.json  sources.json
app/: main.py  scraper.py
migrations/: 0001_create_documents.sql
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  scheduler.rs  scraper.rs  security.rs  sync_bin.rs
src/routes/: documents.rs  mod.rs  system.rs
