[package]
name = "soul-scrape-rust"
version = "1.0.0"
edition = "2021"
description = "DOE Philippines Fuel Price Aggregator API — Rust/Axum port"

[[bin]]
name = "soul-scrape-rust"
path = "src/main.rs"

[[bin]]
name = "sync"
path = "src/sync_bin.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }


# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "migrate",
] }

# HTTP client
reqwest = { version = "0.12", features = [
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
], default-features = false }

# Byte buffer
bytes = "1"

# HTML parsing
scraper = "0.19"

# PDF extraction
pdfium-render = { version = "0.8", features = ["thread_safe"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex (compiled once via Lazy)
regex = "1"
once_cell = "1"

# Environment / config
dotenvy = "0.15"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1"
anyhow = "1"

# OpenAPI / Swagger UI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# URL parsing
url = "2"

# (DNS done via std::net::ToSocketAddrs — no extra dep needed)

# Concurrent futures
futures = "0.3"

# (tokio-util not needed directly)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
